# BitScout

./: Cargo.toml  README.md  README.zh-CN.md  install.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
crates/bitscout-cli/: Cargo.toml
crates/bitscout-cli/src/: cmd_memory.rs  cmd_start.rs  cmd_status.rs  cmd_stop.rs  main.rs
crates/bitscout-core/: Cargo.toml
crates/bitscout-core/src/: dispatch.rs  lib.rs  protocol.rs
crates/bitscout-core/src/cache/: content_cache.rs  mod.rs
crates/bitscout-core/src/compat/: find_compat.rs  grep_compat.rs  mod.rs  rg_compat.rs  rg_flags.rs
crates/bitscout-core/src/extract/: docx.rs  gz.rs  mod.rs  pdf.rs  pipeline.rs  text.rs  xlsx.rs  zip_extract.rs
crates/bitscout-core/src/fs/: mod.rs  tree.rs  watcher.rs
crates/bitscout-core/src/search/: bm25.rs  engine.rs  lsa.rs  matcher.rs  mod.rs  rp.rs  simd.rs
crates/bitscout-core/tests/: bench_real_pdf.rs
crates/bitscout-daemon/: Cargo.toml
crates/bitscout-daemon/src/: dispatch.rs  find_compat.rs  grep_compat.rs  lib.rs  main.rs  rg_compat.rs  rg_flags.rs  server.rs
crates/bitscout-daemon/tests/: e2e_dispatch.rs
crates/bitscout-memory/: Cargo.toml
crates/bitscout-memory/src/: lib.rs  store.rs
crates/bitscout-shim/: Cargo.toml
docs/: ROADMAP.md  ROADMAP.zh-CN.md  TESTING.md  TESTING.zh-CN.md
tests/benchmark/: Cargo.toml
tests/e2e/: Cargo.toml
tests/e2e/src/: lib.rs
tests/e2e/tests/: accuracy_report.rs  benchmark_modes.rs  cat_conformance.rs  deep_search_demo.rs  e2e_binary_search.rs  e2e_rg_shim.rs  find_fd_conformance.rs  full_conformance.rs  grep_conformance.rs  rg_conformance.rs  semantic_accuracy.rs
(+3 files in other folders)
