[package]
name = "bitscout-core"
version.workspace = true
edition.workspace = true

[dependencies]
memchr = "2"
aho-corasick = "1"
regex = "1"
memmap2 = "0.9"
ignore = "0.4"
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
glob = "0.3"

[dev-dependencies]
tempfile = "3"
