[package]
name = "bitscout-e2e"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dev-dependencies]
tempfile = "3"
serde_json = "1"
flate2 = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
bitscout-core = { path = "../../crates/bitscout-core" }
